--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,20 @@ html, body {
 }
 
 #container {
-    margin: 20px 20px;
+    margin: 20px auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border: 1px solid white;
 }
 
 .cell {
     background-color: rgb(5, 31, 55);
     border: 1px solid white;
-    height: 50px;
-    width: 6%;
+    box-sizing: border-box;
 }
+
 
 button {
     margin: 20px 20px;
